--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,23 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="me.reezy.demo.systembars">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.demo.app">
 
     <application
         android:allowBackup="true"
+        android:dataExtractionRules="@xml/data_extraction_rules"
+        android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:resizeableActivity="false"
-        android:theme="@style/Theme.App">
-
-        <meta-data android:name="android.max_aspect" android:value="2.4" />
-        <meta-data android:name="android.notch_support" android:value="true"/>
-
+        android:theme="@style/AppTheme"
+        tools:targetApi="31">
         <activity
-            android:name=".SystemBarsActivity"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.App.NoActionBar">
+            android:name="com.demo.app.SystemBarsActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
