--- a/gradle.properties
+++ b/gradle.properties
@@ -15,12 +15,15 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # Android operating system, and which are packaged with your app"s APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
-# Automatically convert third-party libraries to use AndroidX
-android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Enables namespacing of each library's R class so that its R class includes only the
+# resources declared in the library itself and none from the library's dependencies,
+# thereby reducing the size of the R class for that library
+android.nonTransitiveRClass=true
 
-APP_ID=me.reezy.demo.systembars
+cosmoRepoPath=https://gitee.com/ezy/repo/raw/cosmo
+buildGradlePath=https://gitee.com/ezy/gradle/raw/cosmo
 
-LIBRARY_GROUP=me.reezy.jetpack
-LIBRARY_VERSION=0.4.0
+LIBRARY_GROUP=me.reezy.cosmo
+LIBRARY_VERSION=0.7.0
