--- a/systembars/build.gradle
+++ b/systembars/build.gradle
@@ -1,7 +1,7 @@
 
-apply from: "https://gitee.com/ezy/gradle/raw/master/build-library-android-publish.gradle"
-
+apply from: "$buildGradlePath/build-library-android.gradle"
 
 dependencies {
-    api "androidx.appcompat:appcompat:1.3.0-alpha02"
+    api "androidx.core:core-ktx:1.8.0"
+    api 'androidx.fragment:fragment-ktx:1.5.2'
 }
