--- a/settings.gradle
+++ b/settings.gradle
@@ -12,6 +12,9 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
     }
+    versionCatalogs {
+        libs { from files("$buildGradlePath/versions-cosmo.toml") }
+    }
 }
 rootProject.name = "systembars"
 include ':app'
